Corrupted mesh display on macOS #65364

Closed
opened 2019-05-31 21:13:55 +02:00 by Eric Leo · 9 comments

System Information
Operating system: Darwin-17.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon RX 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-1.60.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-05-31 15:17, hash: f87bba0368
Worked: (optional)

Short description of error
On opening a file the model has extra faces that did not exist before. See the attached two files. One is from the May 28th build and the other is from May 31. The model is fine in the May 28th build with no problems. The model form the May 31 build has the extra faces connecting external boundaries.

The model made from a was scanned hand drawn image, imported into Adobe Illustrator, Cleaned up, saved as an SVG, Imported into blender and converted to a mesh from curves. It was then cleaned up, extruded and material applied.

Exact steps for others to reproduce the error
1 Open Blender
2 Open recent

Build 28 May 2019 Buck and Doe NO problem.blend

Build 31 May 2019 Buck and Doe problem.blend

**System Information** Operating system: Darwin-17.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon RX 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-1.60.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-05-31 15:17, hash: `f87bba0368` Worked: (optional) **Short description of error** On opening a file the model has extra faces that did not exist before. See the attached two files. One is from the May 28th build and the other is from May 31. The model is fine in the May 28th build with no problems. The model form the May 31 build has the extra faces connecting external boundaries. The model made from a was scanned hand drawn image, imported into Adobe Illustrator, Cleaned up, saved as an SVG, Imported into blender and converted to a mesh from curves. It was then cleaned up, extruded and material applied. **Exact steps for others to reproduce the error** 1 Open Blender 2 Open recent [Build 28 May 2019 Buck and Doe NO problem.blend](https://archive.blender.org/developer/F7081489/Build_28_May_2019_Buck_and_Doe_NO_problem.blend) [Build 31 May 2019 Buck and Doe problem.blend](https://archive.blender.org/developer/F7081490/Build_31_May_2019_Buck_and_Doe_problem.blend)
Author

Added subscriber: @DiveMeCarzy

Added subscriber: @DiveMeCarzy

#65411 was marked as duplicate of this issue

#65411 was marked as duplicate of this issue

#65401 was marked as duplicate of this issue

#65401 was marked as duplicate of this issue
Brecht Van Lommel changed title from Extra faces being made between outer bounds of model. to Corrupted mesh display on macOS 2019-06-02 00:43:42 +02:00

Added subscribers: @DanielCamino, @matc

Added subscribers: @DanielCamino, @matc

Added subscriber: @brecht

Added subscriber: @brecht
Clément Foucault was assigned by Brecht Van Lommel 2019-06-02 03:01:56 +02:00

Caused by 77f5210f22.

Assuming GLEW_ARB_ES3_compatibility is true seems to avoid the issue at least in this file, though I'm not sure if that means GL_PRIMITIVE_RESTART_FIXED_INDEX is actually supported on macOS (and not just iOS). I couldn't find details about that. Things seems to work ok removing the line that enables GL_PRIMITIVE_RESTART_FIXED_INDEX, so not sure how to test if this works.

The code in static void primitive_restart_index seems problematic to me. That static variable is not going to work if any other code calls glPrimitiveRestartIndex() or if multiple OpenGL contexts are used? Leaving out the if (el->index_type != last_type) test avoids the issue as well, I don't know if that's an important optimization.

Caused by 77f5210f22. Assuming `GLEW_ARB_ES3_compatibility` is `true` seems to avoid the issue at least in this file, though I'm not sure if that means `GL_PRIMITIVE_RESTART_FIXED_INDEX` is actually supported on macOS (and not just iOS). I couldn't find details about that. Things seems to work ok removing the line that enables `GL_PRIMITIVE_RESTART_FIXED_INDEX`, so not sure how to test if this works. The code in `static void primitive_restart_index` seems problematic to me. That `static` variable is not going to work if any other code calls `glPrimitiveRestartIndex()` or if multiple OpenGL contexts are used? Leaving out the `if (el->index_type != last_type)` test avoids the issue as well, I don't know if that's an important optimization.

Added subscriber: @xuekepei

Added subscriber: @xuekepei

This issue was referenced by de0cae29cf

This issue was referenced by de0cae29cf75133ec0afc82f4b21de281992ede0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65364
No description provided.